third_party/move/move-compiler/tests/move_check/typing/module_call_missing_function.exp
error[E03003]: unbound module member
   ┌─ tests/move_check/typing/module_call_missing_function.move:13:9
   │
13 │         Self::fooo();
   │         ^^^^^^^^^^ Invalid module access. Unbound function 'fooo' in module '0x2::M'

error[E03009]: unbound variable
   ┌─ tests/move_check/typing/module_call_missing_function.move:14:9
   │
14 │         foooo();
   │         ^^^^^ Invalid function usage. Unbound variable 'foooo'

error[E03003]: unbound module member
   ┌─ tests/move_check/typing/module_call_missing_function.move:15:9
   │
15 │         X::foooooo();
   │         ^^^^^^^^^^ Invalid module access. Unbound function 'foooooo' in module '0x2::X'

